[tool.poetry]
name = "sem_py"
version = "0.0.1"
description = "SEM implementation wrapped with Python"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "sem_py"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"